scrollbar fixed by adding overflow-x:clip

--- a/portfolio/styles/globals.css
+++ b/portfolio/styles/globals.css
@@ -11,8 +11,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  cursor: none !important;
-  
+  cursor: none !important;  
 }
 .show-cursor {
   cursor: pointer !important;
@@ -21,7 +20,8 @@
 html,
 body {
   max-width: 100vw;
-  
+  overflow-y: visible;
+  overflow-x: clip;
 }
 
 a {
